Добавил возможность добавления папок без названия

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,3 +2,6 @@
 @import 'libs/normalize';
 
 @import './components/home';
+@import './components/collection';
+@import './components/folders';
+@import './components/inputFolder';
