--- a/src/scss/components/_folders.scss
+++ b/src/scss/components/_folders.scss
@@ -1,19 +1,55 @@
 .folder {
-  // .folder__image
-  &__image {
+  // .folder__content
+  &__content {
     width: 300px;
     height: 300px;
+    position: relative;
+    z-index: 1000;
+
+    // .folder__title
+    .folder__title {
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    .folder__remove {
+      transition: all 0.3s ease;
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      box-shadow: inset 0px 1px 0px 0px #f29c93;
+      background: linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+      background-color: #fe1a00;
+      border-radius: 31px;
+      border: 1px solid #d83526;
+      display: inline-block;
+      cursor: pointer;
+      color: #ffffff;
+      font-family: Arial;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 5px 10px;
+      text-decoration: none;
+      text-shadow: 0px 1px 0px #b23e35;
+
+      &:hover {
+        background: linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%);
+        background-color: #ce0100;
+      }
+    }
+
     svg {
       //   display: block;
-      transform: scale(10.5) translate(50%, 50%);
+      transform: scale(10.5) translate(55%, 50%);
       cursor: pointer;
       transition: transform 0.3s ease;
       &:hover {
         transform: scale(11) translate(50%, 50%);
       }
     }
-  }
-  // .folder__title
-  &__title {
   }
 }
