--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,5 +3,5 @@
 
 @import './components/home';
 @import './components/collection';
-@import './components/folders';
+@import './components/folder';
 @import './components/inputFolder';
